tests/golden/error/glob_conflict/mod_b.tg
// Module B defines a different function also named `collide`.

pub fn collide(x: Nat) -> Nat {
    x
}
